Changelog from V1.5

Featuers:
	-General
		-Tool hotkeys - numbers 1 through 5 switch directly to the correct tool (eg. 1 is pickaxe)
		-New death messages, stored in easy-to-modify variables
		-Server name is displayed at the top of the scoreboard
		-Input to the chat buffer now has correct localization and will not drop keys
		-Change in road graphics to be less dull
	-Nametags
		-Now coloured the team's colour instead of white
		-The other team's players get nametags too, which will appear when you're close and can see them
	-Chat
		-Chat history - when you press y or u to start typing the last 10 chat messages will reappear
		-Wordwrap, making long messages still be fully readable
		-Copy, paste, and cut are now supported in chat
	-Settings
		-Fully functional settings menu! Provides an easy-to-use interface to edit all the settings available in client.config.txt
		-New mouse sensitivity option
	-Server
		-New settings of spherical tnt explosions, lava that can spread with only more lava as support (fills holes), lava that absorbs shock blocks (Fish's concept), and road blocks that absorb lava beneath them (also Fish's concept)
		-Variables such as server name, tnt toggles, max players, etc. can be changed mid-game via the server console - try "listvars" and "<var> = <value"
		-Public server list updates and map sending are now run in seperate threads, removing lag whenever a player joins
		-Made server command "players" output how many people are playing and the player capacity
		-Servers now have "bann <name>" and "kickn <name>" to kick/ban people by name instead of ip
		-Servers now display (in the server console) the ip of people as soon as they connect
		-Servers now can chat just by putting y in front of their message - no need for "say "! It's like using the in-game client!
		-Maps are automatically backed up by server every 5 minutes
		-Map loading by server auto-disonnects everyone
	-Other
		-Help menu updated to reflect new key layout